--- a/A -1.html
+++ b/A -1.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrap">
         <div class="header">
-            <div class="logo"><a href="#"><img src="./images/logo.png" alt="쇼핑몰 로고"></a></div>
+            <div class="logo"><a href="#"><img src="./images/A-1/logo.png" alt="쇼핑몰 로고"></a></div>
             <ul class="gnb">
                 <li><a href="#">탑</a>
                     <ul>
@@ -51,34 +51,34 @@
 
         <div class="slider">
             <div class="slide">
-                <a href="#"><img src="./images/slide1.jpg" alt="슬라이드1"></a>
-                <a href="#"><img src="./images/slide2.jpg" alt="슬라이드2"></a>
-                <a href="#"><img src="./images/slide3.jpg" alt="슬라이드3"></a>
+                <a href="#"><img src="./images/A-1/slide1.jpg" alt="슬라이드1"></a>
+                <a href="#"><img src="./images/A-1/slide2.jpg" alt="슬라이드2"></a>
+                <a href="#"><img src="./images/A-1/slide3.jpg" alt="슬라이드3"></a>
             </div>
         </div>
 
         <div class="contents">
-            <div class="tap">
-                <ul class="tap_title">
+            <div class="tab">
+                <ul class="tab_title">
                     <li class="on"><a href="#">공지사항</a></li>
                     <li><a href="#">갤러리</a></li>
                 </ul>
-                <div class="tap_contents">
+                <div class="tab_contents">
                     <ul class="notice">
-                        <li><a href="#">2021년 2월 무이자 할부 카드 안내 2021년 2월 무이자 할부 카드 안내</a></li>
-                        <li><a href="#">쿠폰 사용 안내 2021년 2월 무이자 할부 카드 안내</a></li>
-                        <li><a href="#">쿠폰 다운로드 & 사용 방법</a></li>
-                        <li><a href="#">모바일 앱 설치하고 10% 할인쿠폰 받자!! 2021년 2월 무이자 할부 카드 안내</a></li>
+                        <li><a href="#">2021년 2월 무이자 할부 카드 안내 2021년 2월 무이자 할부 카드 안내</a><span>2023-05-15</span></li>
+                        <li><a href="#">쿠폰 사용 안내 2021년 2월 무이자 할부 카드 안내</a><span>2023-05-12</span></li>
+                        <li><a href="#">쿠폰 다운로드 & 사용 방법</a><span>2023-05-10</span></li>
+                        <li><a href="#">모바일 앱 설치하고 10% 할인쿠폰 받자!! 2021년 2월 무이자 할부 카드 안내</a><span>2023-05-08</span></li>
                     </ul>
                     <ul class="gallery">
-                        <li><a href="#"><img src="./images/gallery1.jpg" alt="갤러리1"></a></li>
-                        <li><a href="#"><img src="./images/gallery2.jpg" alt="갤러리2"></a></li>
-                        <li><a href="#"><img src="./images/gallery3.jpg" alt="갤러리3"></a></li>
+                        <li><a href="#"><img src="./images/A-1/gallery1.jpg" alt="갤러리1"></a></li>
+                        <li><a href="#"><img src="./images/A-1/gallery2.jpg" alt="갤러리2"></a></li>
+                        <li><a href="#"><img src="./images/A-1/gallery3.jpg" alt="갤러리3"></a></li>
                     </ul>
                 </div>
             </div>
             <div class="banner">
-                <a href="#"><img src="./images/banner.jpg" alt="배너이미지"></a>
+                <a href="#"><img src="./images/A-1/banner.jpg" alt="배너이미지"></a>
             </div>
             <div class="link">
                 <ul>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="footer">
-            <div class="f_log"><a href="#"><img src="./images/logo-footer.png" alt="JUST 쇼핑몰 하단 로고"></a></div>
+            <div class="f_log"><a href="#"><img src="./images/A-1/logo-footer.png" alt="JUST 쇼핑몰 하단 로고"></a></div>
             <div class="copyright">
                 <p>ⓒ2020 Kakao enterprise. The Kakao is trademark of Kakaocorp</p>
             </div>
@@ -106,28 +106,8 @@
     <div id="modal">
         <h2>타이틀</h2>
         <p>팝업창 내용</p>
-        <a href="#" class="close">닫기</a>
+        <a href="#" class="close">X 닫기</a>
     </div>
-
-    <script>
-        // gnb
-        $('.gnb').hover(
-            function(){
-                $('.gnb ul').stop().fadeIn()
-            },
-            function(){
-                $('.gnb ul').stop().fadeOut()
-            }
-        )
-        
-        // slide
-        setInterval(function(){
-            $('.slide').animate({top:-300}, function(){
-                $('.slide a:first').appendTo($('.slide'))
-                $('.slide').css('top',0)
-            })
-        }, 3000)
-    </script>
 
 </body>
 </html>
